MOBILE-3320 core: Fix navigation bar text overflow

--- a/src/core/components/navigation-bar/navigation-bar.scss
+++ b/src/core/components/navigation-bar/navigation-bar.scss
@@ -4,9 +4,4 @@
     ion-icon {
         flex-shrink: 0;
     }
-
-    core-format-text {
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
 }
